	TRUE.  'ghyp.moment' was extended such that it takes analytical
	expressions and avoids numerical integration whenever possible.

	* The package 'ghyp' now depends on R >= 2.7. Function 'identity'
	was removed accordingly.

	* Functions 'ghyp.skewness' and 'ghyp.kurtosis' added.

	* 'ghyp' is on R-forge.

	* Instead of putting each function in a different file, functions
	are now collected in 8 files: 'ghypClasses', 'ghypConstructors',
	'ghypFitting', 'ghypGenericMethods', 'ghypGIG', 'ghypInternals',
	'ghypMethods', 'ghypWrappers'.

	* Internal functions now all come with a '.' in front of the name.

	* Internal function 'internal.dghyp' and 'internal.dghypmv'
	renamed to '.dghypuv' and '.dghypmv' respectively.

	* Package vignette extended.

	* Function 'ghyp.dim' added. Returns the dimension of a 'ghyp'
	object.

	* Internal function '.is.symmetric' added.

	* Dataset 'indices', representing 5 financial indices,
	and documentation file 'indices.Rd' added.

	* Function 'portfolio.optimize' extended for tangecy and global
	minimum risk portfolios. Some names of the arguments had to be
	changed.



2008-10-30 David Luethi
ghyp V1.5.0

	* 'transform.ghyp' changed: If data is stored in slot 'data' of an
	object inheriting from class 'ghyp', 'data' will be transformed as
	well.

	* Generic function 'scale' added to conveniently center and/or
	scale a 'ghyp' object to expectation zero and/or unit variance.

	* Function 'rgig' modified. It now uses the random number
	generator for the GIG distribution from the Rmetrics package
	'fBasics'.

2009-05-20 David Luethi
ghyp V1.5.1

	* 'student.t' constructor and internals modified such that it
	works for non-finite variance and Cauchy distribution in
	particular.
	* Documentation and Vignette improved...

2009-08-26 David Luethi
ghyp V1.5.2

	* Documentation and Vignette improved...
	* 'qghyp': In case of student-t convert obj@sigma to 'numeric'
	from 'matrix'.
